# Glumoo_rednote

./: .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  RAILWAY_DEPLOY.md  RAILWAY_FIX.md  RAILWAY_SETUP.md  docker-compose.yml  image_providers.yaml  pyproject.toml  railway.toml  start.bat  start.sh  text_providers.yaml
backend/: app.py  config.py
backend/generators/: google_genai.py  image_api.py
backend/prompts/: content_prompt.txt  content_prompt_instagram.txt  image_prompt_layout_mimic.txt  outline_prompt.txt  outline_prompt_instagram.txt
backend/routes/: config_routes.py  content_routes.py  history_routes.py  image_routes.py  outline_routes.py  utils.py
backend/services/: content.py  history.py  image.py  outline.py
backend/utils/: provider_config.py  text_client.py
data/history/: 0691dedd-93e4-490b-b544-3706f4cff22f.json  1b87cd85-b606-435f-9fcd-bb61f35f9323.json  38a64bc3-108a-4f6f-b06a-d337fbad1cf7.json  5053330a-ee63-4604-a610-9346e437ed71.json  66c3af8c-9a8d-40d4-9b93-d9a2cda63f0e.json  bdaa54c9-f7b7-4cec-926d-a51846c34aa6.json  f2b29048-38eb-4438-97c5-960156ab5052.json  index.json  (+1 more)
docker/: image_providers.yaml  text_providers.yaml
frontend/: index.html  package.json
history/: 1b87cd85-b606-435f-9fcd-bb61f35f9323.json  38a64bc3-108a-4f6f-b06a-d337fbad1cf7.json  66c3af8c-9a8d-40d4-9b93-d9a2cda63f0e.json  bdaa54c9-f7b7-4cec-926d-a51846c34aa6.json  index.json
scripts/: start-linux.sh  start-macos.command  start-windows.bat
tests/: test_config_routes.py  test_image_api.py  test_image_service_storage.py  test_text_provider_errors.py
(+9 files in other folders)
